# home-assistant-ai-analyzer-addon

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  repository.yaml
docs/: ARCHITECTURE.md  IMPLEMENTATION_ROADMAP.md  REPOSITORY_STRUCTURE.md
home-assistant-ai-analyzer/: .dockerignore  DOCS.md  Dockerfile  README.md  config.yaml  pyproject.toml  run.sh
home-assistant-ai-analyzer/analysis_engine/: __init__.py  __main__.py  ai_optimizer.py  app.py  automation_graph.py  automation_issues.py  chat_assistant.py  config_parser.py  dashboard_content.py  entity_usage.py  geolocation_analyzer.py  integration_analyzer.py  models.py  orchestrator.py  report_writer.py  runtime_analyzer.py  suggestion_engine.py  template_analyzer.py  utils.py
home-assistant-ai-analyzer/tests/unit/: test_app.py  test_chat_assistant.py  test_config_parser.py  test_geolocation_analyzer.py  test_orchestrator.py  test_runtime_analyzer.py  test_template_analyzer.py
home-assistant-ai-analyzer/translations/: de.yaml  en.yaml
home-assistant-ai-analyzer/webui/templates/: dashboard.html
