[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "home-assistant-ai-analyzer"
version = "0.3.0"
description = "Home Assistant add-on service for configuration and automation analysis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "jinja2>=3.1.0,<4.0.0",
  "PyYAML>=6.0.0,<7.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0,<9.0.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["analysis_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
